# parsing_refactor

./: ansi.json  config.yaml  data.json  debug_cfg.yaml  etsi.json  h264.json  main.py  output.json  pyproject.toml
src/pdf_parser/: __init__.py  config.py  debug.py  exceptions.py  handlers.py  models.py  operations.py  parsing.py  state.py  utils.py
src/pdf_parser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
